--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/nl-NL/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/nl-NL/Resources.resw
@@ -147,6 +147,9 @@
   <data name="Automation_Properties_NetShield_Page">
     <value>Pagina NetShield</value>
   </data>
+  <data name="Automation_Properties_NoServers_Page">
+    <value>Geen serverspagina</value>
+  </data>
   <data name="Automation_Properties_PortForwarding_Page">
     <value>Pagina Port forwarding</value>
   </data>
@@ -257,6 +260,9 @@
   </data>
   <data name="Common_Actions_Reconnect">
     <value>Opnieuw verbinden</value>
+  </data>
+  <data name="Common_Actions_Refresh">
+    <value>Vernieuwen</value>
   </data>
   <data name="Common_Actions_Remove">
     <value>Verwijderen</value>
@@ -2825,6 +2831,24 @@
   <data name="Map_ConnectTo">
     <value>Verbind met {0}</value>
     <comment>A label inside a map pin tooltip. {0} is a placeholder for country, state or city. (eg. "Connect - United States", "Connect - New York")</comment>
+  </data>
+  <data name="NoServers_ContactUs">
+    <value>Neem contact op</value>
+  </data>
+  <data name="NoServers_FailedToLoad">
+    <value>De serverlijst kon niet worden geladen.</value>
+  </data>
+  <data name="NoServers_NeedHelp">
+    <value>Heeft u hulp nodig?</value>
+  </data>
+  <data name="NoServers_SignOut">
+    <value>Afmelden</value>
+  </data>
+  <data name="NoServers_Tip">
+    <value>Vraag uw beheerder om VPN-toegang voor uw account in te schakelen.</value>
+  </data>
+  <data name="NoServers_Title">
+    <value>Geen VPN-verbindingen beschikbaar</value>
   </data>
   <data name="Notifications_KillSwitch_Description">
     <value>Om uw IP-adres te beschermen, blokkeert de IP-beveiliging uw internetverbinding.</value>
