--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-BR/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-BR/Resources.resw
@@ -147,6 +147,9 @@
   <data name="Automation_Properties_NetShield_Page">
     <value>Página de NetShield</value>
   </data>
+  <data name="Automation_Properties_NoServers_Page">
+    <value>Página sem servidores</value>
+  </data>
   <data name="Automation_Properties_PortForwarding_Page">
     <value>Página de redirecionamento de porta</value>
   </data>
@@ -257,6 +260,9 @@
   </data>
   <data name="Common_Actions_Reconnect">
     <value>Reconectar</value>
+  </data>
+  <data name="Common_Actions_Refresh">
+    <value>Recarregar</value>
   </data>
   <data name="Common_Actions_Remove">
     <value>Remover</value>
@@ -2826,6 +2832,24 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Conectar - {0}</value>
     <comment>A label inside a map pin tooltip. {0} is a placeholder for country, state or city. (eg. "Connect - United States", "Connect - New York")</comment>
   </data>
+  <data name="NoServers_ContactUs">
+    <value>Contate-nos</value>
+  </data>
+  <data name="NoServers_FailedToLoad">
+    <value>Não foi possível carregar a lista de servidores.</value>
+  </data>
+  <data name="NoServers_NeedHelp">
+    <value>Precisa de ajuda?</value>
+  </data>
+  <data name="NoServers_SignOut">
+    <value>Sair da sessão</value>
+  </data>
+  <data name="NoServers_Tip">
+    <value>Peça ao seu administrador para ativar o acesso à VPN para sua conta.</value>
+  </data>
+  <data name="NoServers_Title">
+    <value>Nenhuma conexão VPN disponível</value>
+  </data>
   <data name="Notifications_KillSwitch_Description">
     <value>Para proteger seu endereço IP, o kill switch está bloqueando sua conexão com a Internet.</value>
   </data>
@@ -3234,10 +3258,10 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
     <value>Proteção contra vazamento IPv6</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6LeakProtection_Description">
-    <value>Prevents data leaks by blocking IPv6 traffic that doesn't pass through the VPN tunnel.</value>
+    <value>Impede vazamentos de dados ao bloquear o tráfego IPv6 que não passa pelo túnel VPN.</value>
   </data>
   <data name="Settings_Connection_Advanced_Ipv6_Description">
-    <value>Allows IPv6 traffic to pass through the VPN tunnel. This improves compatibility with IPv6 websites and services.</value>
+    <value>Permite que o tráfego IPv6 passe pelo túnel VPN. Isso melhora a compatibilidade com sites e serviços IPv6.</value>
   </data>
   <data name="Settings_Connection_Advanced_LanConnections">
     <value>Permitir conexões LAN</value>
